# torchaug

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  COPYRIGHT  README.md  augmentations.md  check_license_header.py  pyproject.toml  requirements.txt  setup.py  speed_comparison.md  speed_script.py  test.ipynb
.github/workflows/: build_doc.yml  check_header.yml  documentation.yml  test-cpu.yml
docs/: requirements.txt
docs/source/: batch_transforms.rst  conf.py  functional.rst  index.rst  speed_script.py  ta_tensors.rst  transforms.rst
docs/source/_templates/: class.rst  function.rst
docs/source/data/: dataloader.rst  dataset.rst  index.rst
docs/source/examples/: index.rst  transforms.md
docs/source/functional/: augment.rst  color.rst  functional.rst  geometry.rst  meta.rst  misc.rst  temporal.rst  type_conversion.rst
docs/source/include/: comparison.md  speed_comparison.md  speed_comparison.rst
docs/source/ta_tensors/: bounding_boxes.rst  dataloader.rst  dataset.rst  image.rst  index.rst  labels.rst  mask.rst  nested.rst  ta_tensor.rst  ta_tensors.rst  video.rst
docs/source/transforms/: augment.rst  auto_augment.rst  color.rst  container.rst  geometry.rst  index.rst  meta.rst  misc.rst  temporal.rst  transform.rst  transforms.rst  type_conversion.rst
docs/source/tutorial/: example_coco_dataset.ipynb  example_coco_dataset.md  index.rst  nested_tensors.md  ta_tensors.md  transforms.md
docs/source/tutorial/example_coco_dataset/: batch_transforms.md  index.rst  nested_transforms.md
docs/ta_tensors/: class.rst  dataset.rst  ta_tensors.rst
gaussianblur/: jdenize-Precision-7680_33137.1709656748115192555.pt.trace.json
gpu_torchvision/: __about__.py  __init__.py  setup_tools.py
gpu_torchvision/batch_transforms/: functional.py  transforms.py
gpu_torchvision/transforms/: functional.py  transforms.py
src/torchaug/: utils.py
src/torchaug/batch_transforms/: functional.py
src/torchaug/transforms/: transforms.py
tests/: base_tester.py  test_ta_tensors.py  torchvision.py
tests/batch_transforms/: test_functional.py  test_transforms.py
tests/batch_transforms/test_functional/: test_color.py  test_misc.py
tests/batch_transforms/test_transforms/: test_color.py  test_geometry.py  test_misc.py  test_wrapper.py
tests/data/: test_collate_dataloader.py  test_dataset.py
tests/ta_tensors/: test_batch_bounding_boxes.py  test_batch_images.py  test_batch_labels.py  test_batch_masks.py  test_collate_dataloader.py  test_nested.py  test_ta_tensors.py
tests/transforms/: test_augment.py  test_auto_augment.py  test_color.py  test_container.py  test_functional.py  test_geometry.py  test_meta.py  test_misc.py  test_temporal.py  test_transform.py  test_transforms.py  test_type_conversion.py
tests/transforms/test_functional/: test_color.py  test_misc.py
tests/transforms/test_transforms/: test_augment.py  test_auto_augment.py  test_color.py  test_container.py  test_geometry.py  test_meta.py  test_misc.py  test_temporal.py  test_type_conversion.py  test_wrapper.py
tests/transforms/test_transforms/test_functional/: test_misc.py
tests/utils/: __init__.py  _common.py  _make_tensors.py  _transform_utils.py
torchaug/: __about__.py  __init__.py  _utils.py  utils.py
torchaug/batch_transforms/: __init__.py  _color.py  _deprecated.py  _geometry.py  _misc.py  _transform.py  _utils.py  _wrapper.py  functional.py  transforms.py
torchaug/batch_transforms/functional/: __init__.py  _color.py  _misc.py
torchaug/data/: __init__.py
torchaug/data/dataloader/: __init__.py  _collate.py
torchaug/data/dataset/: __init__.py  _dataset_wrapper.py
torchaug/ta_nested_tensors/: _ta_nested_tensor.py
torchaug/ta_tensors/: __init__.py  _batch_bounding_boxes.py  _batch_concatenated_ta_tensor.py  _batch_images.py  _batch_labels.py  _batch_masks.py  _batch_videos.py  _bounding_boxes.py  _collate_dataloader.py  _dataset_wrapper.py  _image.py  _labels.py  _mask.py  _registry.py  _ta_tensor.py  _torch_function_helpers.py  _video.py  _wrap.py
torchaug/ta_tensors/nested/: __init__.py  _bounding_boxes.py  _image.py  _labels.py  _mask.py  _ta_nested_tensors.py  _tensor.py  _video.py
torchaug/transforms/: __init__.py  _augment.py  _auto_augment.py  _color.py  _container.py  _geometry.py  _meta.py  _misc.py  _temporal.py  _transform.py  _type_conversion.py  _utils.py  _wrapper.py  functional.py  transforms.py
torchaug/transforms/functional/: __init__.py  _augment.py  _color.py  _geometry.py  _meta.py  _misc.py  _temporal.py  _type_conversion.py
torchaug/transforms/functional/_utils/: __init__.py  _kernel.py  _tensor.py
