[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.2",
]

[project]
name = "torchaug"
description = "Torchvision Complementary tool to perform batch and GPU data augmentations."
keywords = [
  "computer vision",
  "deep learning",
  "pytorch",
]
authors = [
  { name="Julien Denize", email="julien.denize@cea.fr" },
]
requires-python = ">=3.8,<3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: GPU",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: CeCILL-C Free Software License Agreement (CECILL-C)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Software Development :: Libraries",
]
dynamic = [
  "dependencies",
  "readme",
  "version",
]
[project.urls]
"Bug Tracker" = "https://github.com/juliendenize/torchaug/issues"
"Download" = "https://github.com/juliendenize/torchaug"
"Homepage" = "https://github.com/juliendenize/torchaug"
"Source Code" = "https://github.com/juliendenize/torchaug"

[tool.setuptools]
zip-safe = true
license-files = ["LICENSE"]
include-package-data = false

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "torchaug.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
exclude = ["docs*", "test*", "examples*"]
namespaces = false

[tool.ruff]
line-length = 119

[tool.ruff.lint]
ignore=["D205", "C901"]
select = ["C", "E", "F", "I", "W", "D"]
ignore-init-module-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "C408", "C901", "F401"]
"docs/*" = ["D", "F401"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["torchaug"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
